# model

./: README.md  pyproject.toml  requirements.txt  test.py  test_loadata.py  test_trainer.py  test_trm.py
datasets/: Caltech256.py  split_data.py
tests/: test_trm.py
tiny_recursive_model/: __init__.py  model.py  trainer.py  trm.py
