[project]
name = "tiny-recursive-model"
version = "0.0.14"
description = "Tiny Recursive Model"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'reasoning',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerate",
    "adam-atan2-pytorch>=0.2.2",
    "einops>=0.8.1",
    "ema-pytorch",
    "torch>=2.4",
    "x-transformers>=2.9.0",
]

[project.urls]
Homepage = "https://pypi.org/project/tiny-recursive-model/"
Repository = "https://github.com/lucidrains/tiny-recursive-model"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tiny_recursive_model"]
